--- a/input.css
+++ b/input.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background: #345c5c;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #1ce0d8;
+}
